--- a/app/src/main/res/layout/activity_actual_meditation.xml
+++ b/app/src/main/res/layout/activity_actual_meditation.xml
@@ -1,39 +1,102 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ActualMeditation">
 
-    <Button
-        android:id="@+id/button2"
+    <!-- Title at the Top -->
+    <TextView
+        android:id="@+id/titleText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Play"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
+        android:text="Music for Meditation"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        android:layout_marginTop="16dp"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.713" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
-    <SeekBar
-        android:id="@+id/seekBar"
-        android:layout_width="384dp"
-        android:layout_height="17dp"
-        android:layout_marginBottom="45dp"
-        app:layout_constraintBottom_toTopOf="@+id/button2"
+    <!-- Play Piano Button -->
+    <Button
+        android:id="@+id/playPiano"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Play Piano"
+        app:layout_constraintTop_toBottomOf="@id/titleText"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:layout_marginTop="16dp" />
 
-    <ImageView
-        android:id="@+id/imageView4"
+    <!-- Progress Bar for Piano -->
+    <SeekBar
+        android:id="@+id/progressPiano"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/playPiano"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="8dp" />
+
+    <!-- Play Track 1 Button -->
+    <Button
+        android:id="@+id/playTrack1"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Play Track 1"
+        app:layout_constraintTop_toBottomOf="@id/progressPiano"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="16dp" />
+
+    <!-- Progress Bar for Track 1 -->
+    <SeekBar
+        android:id="@+id/progressTrack1"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/playTrack1"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="8dp" />
+
+    <!-- Play Track 2 Button -->
+    <Button
+        android:id="@+id/playTrack2"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Play Track 2"
+        app:layout_constraintTop_toBottomOf="@id/progressTrack1"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="16dp" />
+
+    <!-- Progress Bar for Track 2 -->
+    <SeekBar
+        android:id="@+id/progressTrack2"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/playTrack2"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="8dp" />
+
+    <!-- Motivational Quote at the Bottom -->
+    <TextView
+        android:id="@+id/motivationalQuote"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="48dp"
-        app:layout_constraintBottom_toBottomOf="@+id/button2"
+        android:text="Relax, Refresh, and Recharge."
+        android:textSize="16sp"
+        android:textStyle="italic"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/medreal" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
