--- a/app/src/main/res/layout/activity_stress_display.xml
+++ b/app/src/main/res/layout/activity_stress_display.xml
@@ -1,11 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".stressDisplay">
 
+    <!-- App Logo -->
+    <ImageView
+        android:id="@+id/imageView6"
+        android:layout_width="131dp"
+        android:layout_height="102dp"
+        android:layout_marginTop="28dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/defenderlogo" />
+
+    <!-- Title: Stress Calculator Result -->
     <TextView
         android:id="@+id/textView2"
         android:layout_width="match_parent"
@@ -17,48 +30,86 @@
         android:textSize="33sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.692"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/imageView6" />
 
-    <TextView
-        android:id="@+id/tvOp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="TextView"
-        android:textColor="#000000"
-        android:textSize="26sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.392" />
-
+    <!-- Stress Level / Suicidal Thoughts Message -->
     <TextView
         android:id="@+id/tvdis"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         android:gravity="center"
-        android:text="TextView"
+        android:text="Stress Level"
         android:textColor="#000000"
         android:textSize="26sp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.515" />
+        app:layout_constraintTop_toBottomOf="@id/textView2" />
 
-    <ImageView
-        android:id="@+id/imageView6"
-        android:layout_width="131dp"
-        android:layout_height="102dp"
-        android:layout_marginTop="28dp"
+    <!-- Score or Doctor Details -->
+    <TextView
+        android:id="@+id/tvDoctorDetails"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:gravity="center"
+        android:text="Details here"
+        android:textColor="#000000"
+        android:textSize="18sp"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/defenderlogo" />
+        app:layout_constraintTop_toBottomOf="@id/tvdis" />
+
+    <!-- Recommendation Text -->
+    <TextView
+        android:id="@+id/recommendationText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=""
+        android:textSize="16sp"
+        android:gravity="center"
+        android:layout_marginTop="16dp"
+        android:textColor="#000000"
+        app:layout_constraintTop_toBottomOf="@id/tvDoctorDetails"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <!-- Yoga Button -->
+    <Button
+        android:id="@+id/yogaButton"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Go to Yoga"
+        android:layout_marginTop="16dp"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/recommendationText" />
+
+    <!-- Meditation Button -->
+    <Button
+        android:id="@+id/meditationButton"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Go to Meditation"
+        android:layout_marginTop="16dp"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/yogaButton" />
+
+    <!-- Healthy Diet Button -->
+    <Button
+        android:id="@+id/dietButton"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Go to Healthy Diet"
+        android:layout_marginTop="16dp"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/meditationButton" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
